Update launcher.sh